// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when common extension has duplicate common property should have validation failures() 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName of base Common."`;

exports[`when common extension has duplicate common property should have validation failures() 2`] = `
Object {
  "column": 11,
  "line": 12,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when common extension has duplicate property name should have validation failures() 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName of base Common."`;

exports[`when common extension has duplicate property name should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 12,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when common extension has multiple duplicates should have validation failures() 1`] = `"Common Extension CommonName redeclares property DuplicatePropertyName1 of base Common."`;

exports[`when common extension has multiple duplicates should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 16,
  "tokenText": "DuplicatePropertyName1",
}
`;

exports[`when common extension has multiple duplicates should have validation failures() 3`] = `"Common Extension CommonName redeclares property DuplicatePropertyName2 of base Common."`;

exports[`when common extension has multiple duplicates should have validation failures() 4`] = `
Object {
  "column": 9,
  "line": 20,
  "tokenText": "DuplicatePropertyName2",
}
`;
